<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<RelativeLayout  
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <TextView
	        android:id="@+id/addUserTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/addUserTitle"
	        android:layout_centerHorizontal="true"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/phonePrompt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/phone_prompt"
	        android:layout_below="@+id/addUserTitle"
	        android:layout_marginTop="10dp"
	        android:layout_alignParentLeft="true" />
	    
	    <EditText
	        android:id="@+id/userPhone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:inputType="phone"
	        android:layout_toRightOf="@+id/phonePrompt"
			android:layout_alignBaseline="@+id/phonePrompt" />
	
	    <TextView
	        android:id="@+id/namePrompt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/name_prompt"
	        android:layout_below="@+id/userPhone"
	        android:layout_marginTop="30dp"
	        android:layout_alignParentLeft="true" />
	    
	    <EditText
	        android:id="@+id/userName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:inputType="textPersonName"
	        android:layout_toRightOf="@+id/namePrompt"
			android:layout_alignBaseline="@+id/namePrompt" />
	    
	</RelativeLayout>
</ScrollView>